# functionary

./: .dockerignore  .functionary_cloud_env  .gitignore  .gitmodules  CITATION.cff  Dockerfile  Dockerfile.cpu  LICENSE  README.md  add_requirements.txt  assert_padding_loss.py  create_training_data.py  deploy_skypilot.py  example_llama_cpp.py  fastapi_dtos.py  features_desc.md  filter_chat.py  functions.json  gen_rw_data.py  huggingface_token.txt  infer.py  infer_baseten.py  infer_curl.py  infer_modal.py  inference.ipynb  inference.py  llama_cpp_inference_example.py  modal_server.py  modal_server_config.py  modal_server_vllm.py  model_server_config.py  openai_types.py  pyproject.toml  qwen25_vl_service.py  requirements.cpu.txt  requirements.txt  requirements_server.txt  requirements_sgl.txt  requirements_vllm.txt  run_deepseek.sh  (+26 more)
.github/workflows/: python-package.yml
baseten/: config.yaml
baseten/model/: model.py
dockerfiles/: Dockerfile.sgl
draft/: run.sh  test_new.py  test_run.py  test_tokenizer.py  test_transformers.py
ds_config/: zero2.json
functionary/: __init__.py  grammar_sampler.py  inference.py  inference_stream.py  inference_utils.py  inference_vision.py  openai_types.py  prompt.py  prompt_utils.py  schema.py  sglang_inference.py  skypilot_utils.py  tool_list.py  vllm_inference.py
functionary/SchemaGen/: schema_gen.py  test_.py
functionary/SchemaGen/openapi_parsers/: parsers.py
functionary/examples/: llama_cpp_inference.py
functionary/prompt_template/: __init__.py  base_template.py  chat_deepseek_r1_qwen_template.py  cogito_prompt_template.py  deepseek_r1_template.py  gemma2_prompte_template.py  gemma3_prompt_template.py  internlm2_prompt_template.py  llama31_multi_tool_use_template.py  llama31_prompt_template.py  llama31_reasoning_promp_template.py  llama31_reasoning_prompt_template.py  llama3_instruct_prompt_template.py  llama3_json_template.py  llama3_prompt_plate_v3.py  llama3_prompt_template.py  llama3_prompt_template_v3.py  llama4_prompt_template.py  llava_prompt_template.py  magistral_small_template.py  moonlight_template.py  phi3_prompt_template.py  prompt_template_v1.py  prompt_template_v2.py  prompt_utils.py  qwen25_prompt_template.py  qwen25_template.py  qwen25_text_only_template.py  qwen2_prompt_template.py  qwen2_prompt_template_v2.py  qwen3_thinking_template.py  qwen_vl_template.py  r1_distilled_llama.py  r1_distilled_qwen.py  r1_original_template.py  r1_qwen_distill_template.py  r1_template.py
functionary/prompt_template/jinja_templates/: cogito.txt  deepseek-r1-qwen.txt  gemma3.txt  internlm2-chat.txt  json_to_ts_schema.txt  llama4.txt  magistral_small.txt  moonlight.txt  qwen2-vl.txt  qwen2.5-text-only.txt  qwen2.5.txt  (+14 more)
functionary/sglang_monkey_patch/: tokenizer_manager.py
functionary/train/: README.md  assert_injecting_virtual_img_token.py  assert_monkey_patch.py  custom_datasets.py  datasets.py  ds3_config.yaml  example_rewards.py  fsdp_config.yaml  length_statistics.py  llama_attention_mask_monkey_patch.py  llama_flash_attn_monkey_patch.py  llava_dataset.py  log_final_model_to_wandb.py  merge_lora_weight.py  metrics.py  pack_dataset.py  pyproject.toml  requirements.txt  small_tests.jsonl  test_monkey_patch.py  test_monkey_patch_mistral_FA.py  tokenize_dataset.py  tokenize_dataset_for_packing.py  train.py  train_dpo.py  train_grpo.py  train_lora.py  train_requirements.txt  train_utils.py  train_vision.py  training_utils.py
functionary/train/accelerate_configs/: ds2_config_from_ds_config_file.yaml  ds3_config.yaml  ds3_offload_config_from_ds_config_file.yaml  ds3_wo_offload_config_from_ds_config_file.yaml  llama_config.yaml  my_config.yaml
functionary/train/ds_config/: other_zero3.json  zero2.json  zero3.json  zero3_offload_optimizer.json  zero3_offload_params.json  zero3_wo_offload.json
functionary/train/models/: modeling_llava.py
functionary/train/monkey_patch/: README.md  assert_monkey_patch.py  llama_monkey_patch.py  mistral_monkey_patch.py  mistral_monkey_patched.py  packed_dataset.py
functionary/train/packing/: README.md  assert_packing_loss.py  llama_monkey_patch.py  mistral_monkey_patch.py  mixtral_monkey_patch.py  monkey_patch_packing.py  monkey_path_get_unpad_data.py  packed_dataset.py
functionary/train/packing_monkey_patch/: README.md  assert_packing_loss.py  mixtral_monkey_patch.py
functionary/train/yarn/: monkey_patch_configuration_llama.py  monkey_patch_yarn.py
functionary/train_vision/: README.md  assert_injecting_virtual_img_token.py  assert_packing_loss.py  assert_packing_qwen2vl_loss.py  base_datasets.py  compute_data_length_cache.py  internlm_dataset.py  llava_dataset.py  qwen2_dataset.py  qwen2_vl_dataset.py  train.py  train_internlm2.py  train_llava.py  train_vision.py  vision_datasets.py
functionary/vllm_monkey_patch/: async_llm_engine.py
functionary_utils/: __init__.py
functionary_utils/SchemaGen/: schema_gen.py
tests/: prompt_test.txt  prompt_test_cogito.txt  prompt_test_gemma3.txt  prompt_test_internlm2-chat.txt  prompt_test_llama4.txt  prompt_test_qwen2-vl.txt  prompt_test_qwen2.5-text-only.txt  prompt_test_qwen2.5.txt  prompt_test_r1.txt  prompt_test_r1_distilled_llama.txt  prompt_test_r1_distilled_qwen.txt  prompt_test_v1.txt  prompt_test_v2.llama3.txt  prompt_test_v2.llama3_instruct.txt  prompt_test_v2.phi3.txt  prompt_test_v2.qwen2.txt  prompt_test_v2.qwen2_v2.txt  prompt_test_v2.txt  prompt_test_v3-llama3.1-multi-tool-use.txt  prompt_test_v3-llama3.1.txt  prompt_test_v3.gemma2.txt  prompt_test_v3.json.txt  prompt_test_v3.llama3.txt  prompt_test_v3.llava_llama.txt  test_case.json  test_case_v1.json  test_case_v2.json  test_case_v2_code_only.json  test_case_vision.json  test_llama3_prompt_creation.py  test_metrics.py  test_prompt_creation.py  test_request_handling.py  test_schema.py  test_server.py  test_sgl_server.py
train/: README.md  custom_datasets.py  llama_flash_attn_monkey_patch.py  train.py  train.sh
(+11 files in other folders)
