[project]
name = "functionary-train"
version = "0.0.1"
description = "Chat language model that can use tools and interpret the results"
requires-python = ">=3.9"
dependencies = [
    "torch==2.4.0+cu121",
    "torchvision==0.19.0+cu121",
    "torchaudio==2.4.0+cu121",
    "accelerate==0.34.0",
    "bitsandbytes==0.44.1",
    "scipy==1.11.3",
    "sentencepiece==0.1.99",
    "packaging==23.1",
    "ninja==1.11.1",
    "einops==0.7.0",
    "wandb==0.15.11",
    "jsonref==1.1.0",
    "deepspeed==0.14.5",
    "typer==0.9.0",
    "tensorboard==2.15.1",
    "aenum==3.1.15",
    "transformers @ git+https://github.com/huggingface/transformers.git",
    "flash-attn==v2.6.3",
    "json_source_map==1.0.5",
]

[build-system]
requires = ["setuptools>=61.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = ".." }
packages = ["train"]

[project.optional-dependencies]
liger = [
    "liger-kernel==0.3.1",
]
lora = [
    "peft==0.13.2",
    "datasets==2.8.0",
]
